--- a/templates/addProduct.html
+++ b/templates/addProduct.html
@@ -1,1 +1,26 @@
-<h1>Add Item</h1>
+{% extends 'layout.html' %} {% block content %}
+<div class="container">
+    <h1>Product <small>Create New</small></h1>
+    <div class="col-md-8 col-sm-12">
+        <form method="POST">
+            <div class="form-group">
+                <label for="product_Name">Name<span class="mandatory">*</span></label>
+                <input type="text" name="product_Name" class="form-control" placeholder="Name of the Product">
+                <label for="product_Description">Description<span class="mandatory">*</span></label>
+                <textarea name="product_Description" class="form-control" placeholder="Description of the Product" maxlength="500" rows="10"></textarea>
+                <label for="brand_Name">Brand<span class="mandatory">*</span></label>
+                <input type="text" name="brand_Name" class="form-control" placeholder="Name of the Brand">
+                <label for="model_Name">Model<span class="mandatory">*</span></label>
+                <input type="text" name="model_Name" class="form-control" placeholder="Name of the Model">
+                <label for="model_Number">Model Number<span class="mandatory">*</span></label>
+                <input type="text" name="model_Number" class="form-control" placeholder="Model Number">
+                <label for="product_Color">Color<span class="mandatory">*</span></label>
+                <input type="text" name="product_Color" class="form-control" placeholder="Color of the Product">
+                <label for="product_Pic">Picture</label>
+                <input type="text" name="product_Pic" class="form-control" placeholder="URL of the picture of product">
+            </div>
+            <button class="btn btn-default" type="submit">Submit</button>
+        </form>
+    </div>
+</div>
+{% endblock %}
