--- a/templates/showCategory.html
+++ b/templates/showCategory.html
@@ -1,3 +1,25 @@
 {% extends 'layout.html' %}{% block content %}
-<h1>Category</h1>
+<div class="container">
+    <p><a href={{url_for( 'showCategory', category_param=category.name)}}>{{category.name}}</a></p>
+    <h1 class="jumbotron">{{category.name}}</h1> {% if session['username'] %}
+    <div class="row">
+        <div class="text-right"><a href={{url_for( 'editCategory', category_id=category.id)}}><span class="glyphicon glyphicon-pencil"></span> Edit</a></div>
+    </div>
+    {% endif %}
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-10">
+            <h1>SubCategories</h1>
+            <div class="row">
+                <div class="col-md-6">
+                    <ul class="product-font">
+                        {% for subcategory in subcategories %}
+                        <li><a href={{url_for( 'showSubCategory', category_param=category.name, subcategory_param=subcategory.name)}}> {{subcategory.name}}</a></li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
