--- a/templates/showProduct.html
+++ b/templates/showProduct.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %} {% block content %}
 <div class="container">
-    <p><a href={{url_for('showCategory', category=category.name)}} >{{category.name}}</a> > <a href={{url_for('showSubCategory', category_param=category.name, subcategory_param=subcategory.name)}} >{{subcategory.name}}</a> > <a href={{url_for('showProduct', category_param=category.name, subcategory_param=subcategory.name, product_param=product.name)}}>{{product.name}}</a></p>
+    <p><a href={{url_for('showCategory', category_param=category.name)}} >{{category.name}}</a> > <a href={{url_for('showSubCategory', category_param=category.name, subcategory_param=subcategory.name)}} >{{subcategory.name}}</a> > <a href={{url_for('showProduct', category_param=category.name, subcategory_param=subcategory.name, product_param=product.name)}}>{{product.name}}</a></p>
     <h1 class="jumbotron">{{product.name}}</h1>
     <hr>
     {% if session['username'] %}
