--- a/templates/showSubCategory.html
+++ b/templates/showSubCategory.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %} {% block content %}
 <div class="container">
-    <p><a href={{url_for( 'showCategory', category=category.name)}}>{{category.name}}</a> > <a href={{url_for( 'showSubCategory', category_param=category.name, subcategory_param=subcategory.name)}}>{{subcategory.name}}</a></p>
+    <p><a href={{url_for( 'showCategory', category_param=category.name)}}>{{category.name}}</a> > <a href={{url_for( 'showSubCategory', category_param=category.name, subcategory_param=subcategory.name)}}>{{subcategory.name}}</a></p>
     <h1 class="jumbotron">{{subcategory.name}}</h1> {% if session['username'] %}
     <div class="row">
         <div class="text-right"><a href={{url_for( 'editSubCategory', category_param=category.id, subcategory_param=subcategory.name)}}><span class="glyphicon glyphicon-pencil"></span> Edit</a></div>
