Update front end part Add ajax request for category, brand and sub-category

--- a/templates/confirmDelete.html
+++ b/templates/confirmDelete.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}{% block content %}
-<div class="container add-category">
+<div class="top-margin container add-category">
     <div class="col-md-8 col-sm-12">
         <form method="POST">
             <div class="form-group">
