--- a/templates/editCategory.html
+++ b/templates/editCategory.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block content %}
-<div class="container add-category">
+<div class="top-margin container add-category">
     <h1>{{category.name}} <small>Edit Category</small></h1>
     <div class="col-md-8 col-sm-12">
         <form method="POST">
