--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,10 @@ body {
   color: #5a5a5a;
 }
 
+.top-margin{
+  margin-top: 90px;
+}
+
 /* Shift the footer down on add category page*/
 .add-category{
   padding-bottom: 320px;
@@ -14,9 +18,21 @@ body {
 
 /* Flash message */
 .flash {
-  margin-top: 80px;
+  margin-top: 90px;
   width:100%;
   text-decoration: none;
+}
+
+.login{
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.login-link{
+  color: #4784e2;
 }
 
 .product-font{
@@ -25,6 +41,15 @@ body {
 
 .mandatory{
   color: red;
+}
+
+.catalog{
+  width: 500px;
+}
+
+.nav-catalog-list{
+  list-style: none;
+  padding-left: 0;
 }
 
 /* CUSTOMIZE THE NAVBAR
@@ -151,3 +176,323 @@ body {
     margin-top: 120px;
   }
 }
+
+/*
+Common
+*/
+
+img {
+    max-width: 100%;
+}
+
+header {
+    font-family: 'Bahiana', cursive;
+    font-size: 2em;
+}
+
+article {
+    min-height: 70vh;
+}
+
+
+/*
+Font
+*/
+
+[class*="fontawesome-"]:before {
+    font-family: "FontAwesome", "sans-serif";
+    font-size: 0.75em;
+    margin-left: 5em;
+    margin-right: 1em;
+}
+
+
+/*
+Links
+*/
+
+a:hover {
+    color: #2bc;
+    transition: 0.5s;
+}
+
+
+/*
+General
+*/
+
+.brand-img {
+    display: inline-block;
+    height: 3em;
+    margin-top: -10px;
+}
+
+.top-buffer {
+    margin-top: 20px;
+}
+
+.input-label {
+    width: 120px;
+}
+
+.comments_wrapper {
+    max-height: 500px;
+    overflow-x: none;
+    overflow-y: scroll;
+}
+
+.comment-container,
+.like-counter {
+    border-radius: 5px;
+    border: 1px solid #417394;
+    padding: 5px 5px 5px 10px;
+    margin-top: 5px;
+}
+
+.like-counter {
+    padding: 2px 5px 2px 5px;
+}
+
+.comment {
+    padding: 8px 0px;
+}
+
+.btn-submit {
+    margin: 0 auto;
+}
+
+.error {
+    color: red;
+}
+
+.content-area {
+    resize: none;
+}
+
+
+/*
+footer
+*/
+
+.social-links-container {
+    text-align: center;
+}
+
+.social-links li {
+    margin-top: 7px;
+    display: inline-block;
+    font-size: 1.5em;
+}
+
+.nav-buttons li {
+    display: inline-block;
+}
+
+.nav-buttons {
+    margin-top: 7px;
+}
+
+.separator {
+    border-color: #2d3c49;
+}
+
+
+/*
+Blog style
+*/
+
+
+/*
+ * Globals
+ */
+
+body {
+    font-family: Georgia, "Times New Roman", Times, serif;
+    color: #555;
+}
+
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6 {
+    margin-top: 0;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: normal;
+    color: #333;
+}
+
+
+/*
+ * Override Bootstrap's default container.
+ */
+
+@media (min-width: 1200px) {
+    .container {
+        width: 970px;
+    }
+}
+
+
+/*
+ * Masthead for nav
+ */
+
+.blog-masthead {
+    background-color: #428bca;
+    -webkit-box-shadow: inset 0 -2px 5px rgba(0, 0, 0, .1);
+    box-shadow: inset 0 -2px 5px rgba(0, 0, 0, .1);
+}
+
+
+/* Nav links */
+
+.blog-nav-item {
+    position: relative;
+    display: inline-block;
+    padding: 10px;
+    font-weight: 500;
+    color: #cdddeb;
+}
+
+.blog-nav-item:hover,
+.blog-nav-item:focus {
+    color: #fff;
+    text-decoration: none;
+}
+
+
+/* Active state gets a caret at the bottom */
+
+.blog-nav .active {
+    color: #fff;
+}
+
+.blog-nav .active:after {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 0;
+    height: 0;
+    margin-left: -5px;
+    vertical-align: middle;
+    content: " ";
+    border-right: 5px solid transparent;
+    border-bottom: 5px solid;
+    border-left: 5px solid transparent;
+}
+
+
+/*
+ * Blog name and description
+ */
+
+.blog-header {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.blog-title {
+    margin-top: 30px;
+    margin-bottom: 0;
+    font-size: 60px;
+    font-weight: normal;
+}
+
+.blog-description {
+    font-size: 20px;
+    color: #999;
+}
+
+.no-about {
+    color: #999;
+}
+
+
+/*
+ * Main column and sidebar layout
+ */
+
+.blog-main {
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+
+/* Sidebar modules for boxing content */
+
+.sidebar-module {
+    padding: 15px;
+    margin: 0 -15px 15px;
+}
+
+.sidebar-module-inset {
+    padding: 15px;
+    background-color: #f5f5f5;
+    border-radius: 4px;
+}
+
+.sidebar-module-inset p:last-child,
+.sidebar-module-inset ul:last-child,
+.sidebar-module-inset ol:last-child {
+    margin-bottom: 0;
+}
+
+
+/* Pagination */
+
+.pager {
+    margin-bottom: 60px;
+    text-align: left;
+}
+
+.pager > li > a {
+    width: 140px;
+    padding: 10px 20px;
+    text-align: center;
+    border-radius: 30px;
+}
+
+
+/*
+ * Blog posts
+ */
+
+.blog-post {
+    margin-bottom: 60px;
+}
+
+.blog-post-title {
+    margin-bottom: 5px;
+    font-size: 40px;
+}
+
+.blog-post-meta {
+    margin-bottom: 20px;
+    color: #999;
+}
+
+
+/*
+ * Footer
+ */
+
+.blog-footer {
+    padding: 40px 0;
+    color: #999;
+    text-align: center;
+    background-color: #f9f9f9;
+    border-top: 1px solid #e5e5e5;
+}
+
+.blog-footer p:last-child {
+    margin-bottom: 0;
+}
+
