--- a/templates/addCategory.html
+++ b/templates/addCategory.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %} {% block content %}
-<div class="container add-category">
+<div class="top-margin container add-category">
     <h1>Category <small>Create New</small></h1>
     <div class="col-md-8 col-sm-12">
         <form method="POST">
