--- a/templates/addSubCategory.html
+++ b/templates/addSubCategory.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}{% block content %}
-<div class="container">
+<div class="top-margin container">
     <h1>SubCategory <small>Create New</small></h1>
     <div class="col-md-8 col-sm-12">
         <form method="POST">
