--- a/templates/editProduct.html
+++ b/templates/editProduct.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block content %}
-<div class="container add-category">
+<div class="top-margin container add-category">
     <h1>{{product.name}} <small>Edit Product</small></h1>
     <div class="col-md-8 col-sm-12">
         <form method="POST">
