--- a/templates/showBrand.html
+++ b/templates/showBrand.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %} {% block content %}
-<div class=" top-margin container">
+<div class="top-margin container">
     <p><a href={{url_for( 'showCategory', category_param=category.name)}}>{{category.name}}</a> > <a href={{url_for( 'showSubCategory', category_param=category.name, subcategory_param=subcategory.name)}}>{{subcategory.name}}</a></p>
     <h1 class="jumbotron">{{subcategory.name}}</h1> {% if session['username'] %}
     <div class="row">
@@ -9,12 +9,12 @@
     <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-10">
-            <h1>Products</h1>
+            <h1>Brands</h1>
             <div class="row">
                 <div class="col-md-6">
                     <ul class="product-font">
-                        {% for product in products %}
-                        <li><a href={{url_for( 'showProduct', category_param=category.name, subcategory_param=subcategory.name, product_param=product.name)}}> {{product.name}}</a></li>
+                        {% for brand in brands %}
+                        <li><a href={{url_for( 'showProductsByBrand', category_param=category.name, subcategory_param=subcategory.name, brand_param=brand.name)}}> {{brand.name}}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
