--- a/templates/showCategory.html
+++ b/templates/showCategory.html
@@ -1,9 +1,9 @@
 {% extends 'layout.html' %}{% block content %}
-<div class="container">
+<div class="top-margin container">
     <p><a href={{url_for( 'showCategory', category_param=category.name)}}>{{category.name}}</a></p>
     <h1 class="jumbotron">{{category.name}}</h1> {% if session['username'] %}
     <div class="row">
-        <div class="text-right"><a href={{url_for( 'editCategory', category_id=category.id)}}><span class="glyphicon glyphicon-pencil"></span> Edit</a></div>
+    <div class="text-right"><a href={{url_for( 'addCategory')}}><span class="glyphicon glyphicon-plus"></span> Add</a> <a href={{url_for( 'editCategory', category_id=category.id)}}><span class="glyphicon glyphicon-pencil"></span> Edit</a></div>
     </div>
     {% endif %}
     <div class="row">
