--- a/templates/showProductsByBrand.html
+++ b/templates/showProductsByBrand.html
@@ -1,9 +1,9 @@
 {% extends 'layout.html' %} {% block content %}
-<div class=" top-margin container">
+<div class="top-margin container">
     <p><a href={{url_for( 'showCategory', category_param=category.name)}}>{{category.name}}</a> > <a href={{url_for( 'showSubCategory', category_param=category.name, subcategory_param=subcategory.name)}}>{{subcategory.name}}</a></p>
     <h1 class="jumbotron">{{subcategory.name}}</h1> {% if session['username'] %}
     <div class="row">
-        <div class="text-right"><a href={{url_for( 'addSubCategory', category_param=category.name)}}><span class="glyphicon glyphicon-plus"></span> Add</a> <a href={{url_for( 'editSubCategory', category_param=category.name, subcategory_param=subcategory.name)}}><span class="glyphicon glyphicon-pencil"></span> Edit</a></div>
+        <div class="text-right"><a href={{url_for( 'addProduct', category_param=category.name, subcategory_param=subcategory.name)}}><span class="glyphicon glyphicon-plus"></span> Add</a> <a href={{url_for( 'editSubCategory', category_param=category.name, subcategory_param=subcategory.name)}}><span class="glyphicon glyphicon-pencil"></span> Edit</a></div>
     </div>
     {% endif %}
     <div class="row">
