--- a/templates/showProduct.html
+++ b/templates/showProduct.html
@@ -10,7 +10,7 @@
     {% endif %}
     <div class="row">
         <div class="col-md-6 col-sm-12">
-            <img src="http://lorempixel.com/1600/1200/" class="img-responsive">
+            <img src={{product_pic}} class="img-responsive">
         </div>
         <div class="col-md-6 col-sm-12">
             <table class="product-font">
