--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,124 +1,181 @@
 /* GLOBAL STYLES
 -------------------------------------------------- */
+
+
 /* Padding below the footer and lighter body text */
 
 body {
-  padding-bottom: 40px;
-  color: #5a5a5a;
+    padding-bottom: 40px;
+    color: #5a5a5a;
 }
 
-.top-margin{
-  margin-top: 90px;
+.top-margin {
+    margin-top: 90px;
 }
+
 
 /* Shift the footer down on add category page*/
-.add-category{
-  padding-bottom: 320px;
+
+.add-category {
+    padding-bottom: 320px;
 }
+
 
 /* Flash message */
+
 .flash {
-  margin-top: 90px;
-  width:100%;
-  text-decoration: none;
+    margin-top: 90px;
+    width: 100%;
+    text-decoration: none;
 }
 
-.login{
-  position: relative;
-  display: block;
-  box-sizing: border-box;
-  padding-top: 15px;
-  padding-bottom: 15px;
+.login {
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
-.login-link{
-  color: #4784e2;
+.login-link {
+    color: #4784e2;
 }
 
-.product-font{
-  font-size: 20px;
+.product-font {
+    font-size: 20px;
 }
 
-.mandatory{
-  color: red;
+.action-font {
+    font-size: 15px;
 }
 
-.catalog{
-  width: 500px;
+.mandatory {
+    color: red;
 }
 
-.nav-catalog-list{
-  list-style: none;
-  padding-left: 0;
+.catalog {
+    width: 500px;
 }
+
+.nav-catalog-list {
+    list-style: none;
+    padding-left: 0;
+}
+
+.login-modal {
+    text-indent: 0px;
+    margin-top: 10px;
+    padding: 0px;
+    background: transparent;
+    border-style: none;
+    line-height: normal;
+    vertical-align: baseline;
+    display: inline-block;
+    width: 114px;
+    height: 36px;
+    position: relative;
+}
+
+.login-Button {
+    opacity: 1;
+    z-index: 10000;
+    cursor: pointer;
+    outline: 0px;
+    height: 36px;
+}
+
+.modal-dialog {
+    width: 300px;
+    min-width: 200px;
+    max-width: 300px;
+}
+
 
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
 
+
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
+
 .navbar-wrapper {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 20;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 20;
 }
 
+
 /* Flip around the padding for proper display in narrow viewports */
+
 .navbar-wrapper > .container {
-  padding-right: 0;
-  padding-left: 0;
+    padding-right: 0;
+    padding-left: 0;
 }
+
 .navbar-wrapper .navbar {
-  padding-right: 15px;
-  padding-left: 15px;
+    padding-right: 15px;
+    padding-left: 15px;
 }
+
 .navbar-wrapper .navbar .container {
-  width: auto;
+    width: auto;
 }
 
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
+
 /* Carousel base class */
+
 .carousel {
-  height: 500px;
-  margin-bottom: 60px;
-}
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  z-index: 10;
+    height: 500px;
+    margin-bottom: 60px;
 }
 
-/* Declare heights because of positioning of img element */
-.carousel .item {
-  height: 500px;
-  background-color: #777;
+
+/* Since positioning the image, we need to help out the caption */
+
+.carousel-caption {
+    z-index: 10;
 }
+
+
+/* Declare heights because of positioning of img element */
+
+.carousel .item {
+    height: 500px;
+    background-color: #777;
+}
+
 .carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 500px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 500px;
 }
 
 
 /* MARKETING CONTENT
 -------------------------------------------------- */
 
+
 /* Center align the text within the three columns below the carousel */
+
 .marketing .col-lg-4 {
-  margin-bottom: 20px;
-  text-align: center;
+    margin-bottom: 20px;
+    text-align: center;
 }
+
 .marketing h2 {
-  font-weight: normal;
+    font-weight: normal;
 }
+
 .marketing .col-lg-4 p {
-  margin-right: 10px;
-  margin-left: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
 
@@ -126,14 +183,17 @@ body {
 ------------------------- */
 
 .featurette-divider {
-  margin: 80px 0; /* Space out the Bootstrap <hr> more */
+    margin: 80px 0;
+    /* Space out the Bootstrap <hr> more */
 }
 
+
 /* Thin out the marketing headings */
+
 .featurette-heading {
-  font-weight: 300;
-  line-height: 1;
-  letter-spacing: -1px;
+    font-weight: 300;
+    line-height: 1;
+    letter-spacing: -1px;
 }
 
 
@@ -141,41 +201,39 @@ body {
 -------------------------------------------------- */
 
 @media (min-width: 768px) {
-  /* Navbar positioning foo */
-  .navbar-wrapper {
-    margin-top: 20px;
-  }
-  .navbar-wrapper .container {
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-  .navbar-wrapper .navbar {
-    padding-right: 0;
-    padding-left: 0;
-  }
-
-  /* The navbar becomes detached from the top, so we round the corners */
-  .navbar-wrapper .navbar {
-    border-radius: 4px;
-  }
-
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 20px;
-    font-size: 21px;
-    line-height: 1.4;
-  }
-
-  .featurette-heading {
-    font-size: 50px;
-  }
+    /* Navbar positioning foo */
+    .navbar-wrapper {
+        margin-top: 20px;
+    }
+    .navbar-wrapper .container {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+    .navbar-wrapper .navbar {
+        padding-right: 0;
+        padding-left: 0;
+    }
+    /* The navbar becomes detached from the top, so we round the corners */
+    .navbar-wrapper .navbar {
+        border-radius: 4px;
+    }
+    /* Bump up size of carousel content */
+    .carousel-caption p {
+        margin-bottom: 20px;
+        font-size: 21px;
+        line-height: 1.4;
+    }
+    .featurette-heading {
+        font-size: 50px;
+    }
 }
 
 @media (min-width: 992px) {
-  .featurette-heading {
-    margin-top: 120px;
-  }
+    .featurette-heading {
+        margin-top: 120px;
+    }
 }
+
 
 /*
 Common
@@ -495,4 +553,3 @@ h6,
 .blog-footer p:last-child {
     margin-bottom: 0;
 }
-
