--- a/templates/addSubCategory.html
+++ b/templates/addSubCategory.html
@@ -9,7 +9,11 @@
                 <label for="sub_Description">Description</label>
                 <textarea name="sub_Description" class="form-control" maxlength="250" rows="3" placeholder="Description of the SubCategory"></textarea>
                 <label for="category">Category</label>
-                <input type="text" name="category" class="form-control" disabled placeholder="{{cat_Name}}">
+                <select name="cat_name" class="form-control">
+                    {% for cat in categories %}
+                    <option value={{cat.name.replace( " ", "+")}}>{{cat.name}}</option>
+                    {% endfor %}
+                </select>
             </div>
             <button class="btn btn-default" type="submit">Submit</button>
         </form>
