--- a/templates/layout.html
+++ b/templates/layout.html
@@ -47,20 +47,17 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href={{url_for( 'addCategory')}}>Add Category</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
+                                    <li><a href={{url_for( 'showUserCategory')}}>My Categories</a></li>
                                     <li role="separator" class="divider"></li>
-                                    <li class="dropdown-header">Nav header</li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li><a href="#">One more separated link</a></li>
+                                    <li><a href={{url_for( 'addCategory')}}>Add Category</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="http://theprogrammersblog.appspot.com/about">About</a></li>
                         </ul>
                         {% if not session['username'] %}
-                        <div class="login pull-right"><a class="login-link" href={{url_for( 'login')}}>Login</a></div>
+                        <div class="login pull-right">
+                            <a href="#" data-toggle="modal" data-target="#myModal">Login</a>
+                        </div>
                         {% else %}
                         <div class="login pull-right">
                             {{session['username']}} |
@@ -80,7 +77,7 @@
             {% endfor %}
         </ul>
     </div>
-    {% endif %} {% endwith %} {% block content %} {% endblock %}
+    {% endif %} {% endwith %} {% block content %} {% endblock %} {% include 'login_modal.html' %}
     <!-- FOOTER -->
     <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
