--- a/templates/showSubCategory.html
+++ b/templates/showSubCategory.html
@@ -11,11 +11,26 @@
         <div class="col-md-10">
             <h1>Products</h1>
             <div class="row">
-                <div class="col-md-6">
+                {% if session['username'] %}
+                <div class="col-md-12">
+                    <a href={{url_for( 'addProduct', category_param=category.name, subcategory_param=subcategory.name)}}>Create New Product</a>
+                </div>
+                {% endif %}
+                <hr/>
+                <div class="col-md-12">
                     <ul class="product-font">
                         {% for product in products %}
-                        <li><a href={{url_for( 'showProduct', category_param=category.name, subcategory_param=subcategory.name, product_param=product.name)}}> {{product.name}}</a></li>
-                        {% endfor %}
+                        <li>
+                            <div class="col-md-6">
+                                <a href={{url_for( 'showProduct', category_param=category.name, subcategory_param=subcategory.name, product_param=product.name)}}> {{product.name}}</a>
+                            </div>
+                            {% if session['username'] %}
+                            <div class="col-md-6 action-font">
+                                <a href={{url_for( 'editProduct', category_param=category.name, subcategory_param=subcategory.name, product_param=product.name)}}>Edit</a> |
+                                <a href={{url_for( 'deleteProduct', category_param=category.name, subcategory_param=subcategory.name, product_id=product.id)}}>Delete</a>
+                            </div>
+                        </li>
+                        {% endif %} {% endfor %}
                     </ul>
                 </div>
             </div>
