--- a/templates/editProduct.html
+++ b/templates/editProduct.html
@@ -9,15 +9,15 @@
                 <label for="product_description">Description <span class="mandatory">*</span></label>
                 <textarea class="form-control" name="product_description" maxlength="500" rows="3" placeholder="{{product.description}}"></textarea>
                 <label for="brand_Name">Brand<span class="mandatory">*</span></label>
-                <input type="text" name="brand_Name" class="form-control" placeholder="{{brand.name}}">
-                <label for="model_Name">Model<span class="mandatory">*</span></label>
-                <input type="text" name="model_Name" class="form-control" placeholder="{{product_specs.model_name}}">
-                <label for="model_Number">Model Number<span class="mandatory">*</span></label>
-                <input type="text" name="model_Number" class="form-control" placeholder="{{product_specs.model_number}}">
-                <label for="product_Color">Color<span class="mandatory">*</span></label>
-                <input type="text" name="product_Color" class="form-control" placeholder="{{product_specs.color}}">
-                <label for="product_Pic">Picture</label>
-                <input type="text" name="product_Pic" class="form-control" placeholder="{{product_pic.picture}}">
+                <input type="text" name="brand_name" class="form-control" placeholder="{{brand.name}}">
+                <label for="model_name">Model<span class="mandatory">*</span></label>
+                <input type="text" name="model_name" class="form-control" placeholder="{{product_specs.model_name}}">
+                <label for="model_number">Model Number<span class="mandatory">*</span></label>
+                <input type="text" name="model_number" class="form-control" placeholder="{{product_specs.model_number}}">
+                <label for="product_color">Color<span class="mandatory">*</span></label>
+                <input type="text" name="product_color" class="form-control" placeholder="{{product_specs.color}}">
+                <label for="product_pic">Picture</label>
+                <input type="text" name="product_pic" class="form-control" placeholder="{{product_pic.picture}}">
                 <label for="subcat_name">SubCategory</label>
                 <select name="subcat_name" class="form-control">
                     {% for subcat in subcategories %}
