--- a/Lets_Catalog/templates/editCategory.html
+++ b/Lets_Catalog/templates/editCategory.html
@@ -6,7 +6,7 @@
             <div class="form-group">
                 <label for="cat_Name">Name</label>
                 <input type="text" class="form-control" name="cat_Name"
-                placeholder={{category.name}}>
+                value={{category.name}}>
             </div>
             {% include 'partial_edit_complete.html' %}
         </form>
