--- a/Lets_Catalog/templates/showAllCategories.html
+++ b/Lets_Catalog/templates/showAllCategories.html
@@ -7,7 +7,7 @@
             <div class="row">
                 {% if session['username'] %}
                 <div class="col-md-12">
-                    <a href={{url_for( 'addCategory')}}>Create New Category</a>
+                    <a href={{url_for( 'category_page.addCategory')}}>Create New Category</a>
                 </div>
                 {% endif %}
                 <hr>
@@ -16,12 +16,12 @@
                         {% for category in categories %}
                         <li>
                             <div class="col-md-6">
-                                <a href={{url_for( 'showCategory', category_param=category.name)}}> {{category.name}}</a>
+                                <a href={{url_for( 'category_page.showCategory', category_param=category.name)}}> {{category.name}}</a>
                             </div>
                             {% if session['username'] %}
                             <div class="col-md-6 action-font">
-                                <a href={{url_for( 'editCategory', category_id=category.id)}}>Edit</a> |
-                                <a href={{url_for( 'deleteCategory', category_id=category.id)}}>Delete</a>
+                                <a href={{url_for( 'category_page.editCategory', category_id=category.id)}}>Edit</a> |
+                                <a href={{url_for( 'category_page.deleteCategory', category_id=category.id)}}>Delete</a>
                             </div>
                             {% endif %}
                         </li>
