--- a/Lets_Catalog/templates/confirmDelete.html
+++ b/Lets_Catalog/templates/confirmDelete.html
@@ -7,7 +7,7 @@
                 </br>
                 <button type="submit" class="btn btn-default delete">
                     <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete</button> |
-                <a href={{url_for("home")}}>
+                <a href={{url_for("home_page.home")}}>
                     <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Back to home
             </div>
         </form>
