--- a/Lets_Catalog/templates/home.html
+++ b/Lets_Catalog/templates/home.html
@@ -22,12 +22,12 @@
         </div>
         {% for item in items %}
         <div class="item">
-            <a href={{url_for( "showProduct", category_param=item[0].name, subcategory_param=item[1].name, product_param=item[2].name)}}><img class="third-slide img-responsive" src={{item[3].picture}} alt={{item[2].name}}></a>
+            <a href={{url_for( "product_page.showProduct", category_param=item[0].name, subcategory_param=item[1].name, product_param=item[2].name)}}><img class="third-slide img-responsive" src={{item[3].picture}} alt={{item[2].name}}></a>
             <div class="container">
                 <div class="carousel-caption">
                     <h1>{{item[2].name}}</h1>
                     <p>{{item[2].description}}</p>
-                    <p><a class="btn btn-lg btn-primary" href={{url_for( "showSubCategory", category_param=item[0].name, subcategory_param=item[1].name)}} role="button">Browse gallery</a></p>
+                    <p><a class="btn btn-lg btn-primary" href={{url_for( "subcategory_page.showSubCategory", category_param=item[0].name, subcategory_param=item[1].name)}} role="button">Browse gallery</a></p>
                 </div>
             </div>
         </div>
@@ -54,7 +54,7 @@
             <img class="img-circle" src={{item[3].picture}} alt="Random product image from this category" width="140" height="140">
             <h2>{{item[0].name}}</h2>
             <p>{{item[1].description}}</p>
-            <p><a class="btn btn-default" href={{url_for( 'showCategory', category_param=item[0].name)}} role="button">View details »</a></p>
+            <p><a class="btn btn-default" href={{url_for( 'category_page.showCategory', category_param=item[0].name)}} role="button">View details »</a></p>
         </div>
         {% endfor %}
     </div>
@@ -63,7 +63,7 @@
     <hr class="featurette-divider"> {% for item in items %}
     <div class="row featurette">
         <div class="col-md-7">
-            <h2 class="featurette-heading"><a href={{url_for("showSubCategory", category_param=item[0].name, subcategory_param=item[1].name)}}>{{item[1].name}}</a></h2>
+            <h2 class="featurette-heading"><a href={{url_for("subcategory_page.showSubCategory", category_param=item[0].name, subcategory_param=item[1].name)}}>{{item[1].name}}</a></h2>
             <p class="lead">{{item[1].description}}</p>
         </div>
         <div class="col-md-5">
