--- a/Lets_Catalog/templates/layout.html
+++ b/Lets_Catalog/templates/layout.html
@@ -24,11 +24,11 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href={{url_for( 'home')}}>Catalog</a>
+                        <a class="navbar-brand" href={{url_for( 'home_page.home')}}>Catalog</a>
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
-                            <li><a href={{url_for( "home")}}>Home</a></li>
+                            <li><a href={{url_for( 'home_page.home')}}>Home</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Catalog <span class="caret"></span></a>
                                 <ul id="nav-catalog" class="catalog dropdown-menu">
@@ -47,23 +47,18 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href={{url_for( 'showUserCategory')}}>My Categories</a></li>
+                                    <li><a href={{url_for( 'category_page.showUserCategory')}}>My Categories</a></li>
                                     <li role="separator" class="divider"></li>
-                                    <li><a href={{url_for( 'addCategory')}}>Add Category</a></li>
+                                    <li><a href={{url_for( 'category_page.addCategory')}}>Add Category</a></li>
                                 </ul>
                             </li>
                             <li><a href="http://theprogrammersblog.appspot.com/about">About</a></li>
                         </ul>
-                        {% if not session['username'] %}
                         <div class="login pull-right">
-                            <a href="#" data-toggle="modal" data-target="#myModal">Login</a>
+                            {% if not session['username'] %}
+                            <a href="#" data-toggle="modal" data-target="#myModal">Login</a> {% else %} {{session['username']}} |
+                            <a class="login-link" href={{url_for( 'oauth_page.logout')}}>Logout</a> {% endif %}
                         </div>
-                        {% else %}
-                        <div class="login pull-right">
-                            {{session['username']}} |
-                            <a class="login-link" href={{url_for( 'logout')}}>Logout</a>
-                        </div>
-                        {% endif %}
                     </div>
                 </div>
             </nav>
