--- a/Lets_Catalog/templates/partial_edit_complete.html
+++ b/Lets_Catalog/templates/partial_edit_complete.html
@@ -1,2 +1,2 @@
 <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-ok"> </span>Done</button>
-<a href="{{url_for('home')}}"><span class="glyphicon glyphicon-remove"></span>Back to home</a>
+<a href="{{url_for('home_page.home')}}"><span class="glyphicon glyphicon-remove"></span>Back to home</a>
