--- a/Lets_Catalog/templates/showCategory.html
+++ b/Lets_Catalog/templates/showCategory.html
@@ -1,9 +1,9 @@
 {% extends 'layout.html' %}{% block content %}
 <div class="top-margin container">
-    <p><a href={{url_for( 'showCategory', category_param=category.name)}}>{{category.name}}</a></p>
+    <p><a href={{url_for( 'category_page.showCategory', category_param=category.name)}}>{{category.name}}</a></p>
     <h1 class="jumbotron">{{category.name}}</h1> {% if session['username'] %}
     <div class="row">
-        <div class="text-right"><a href={{url_for( 'addCategory')}}><span class="glyphicon glyphicon-plus"></span> Add</a> <a href={{url_for( 'editCategory', category_id=category.id)}}><span class="glyphicon glyphicon-pencil"></span> Edit</a></div>
+        <div class="text-right"><a href={{url_for( 'category_page.addCategory')}}><span class="glyphicon glyphicon-plus"></span> Add</a> <a href={{url_for( 'category_page.editCategory', category_id=category.id)}}><span class="glyphicon glyphicon-pencil"></span> Edit</a></div>
     </div>
     {% endif %}
     <div class="row">
@@ -13,7 +13,7 @@
             <div class="row">
                 {% if session['username'] %}
                 <div class="col-md-12">
-                    <a href={{url_for( 'addSubCategory', category_param=category.name)}}>Create New SubCategory</a>
+                    <a href={{url_for( 'subcategory_page.addSubCategory', category_param=category.name)}}>Create New SubCategory</a>
                 </div>
                 {% endif %}
                 <hr>
@@ -22,12 +22,12 @@
                         {% for subcategory in subcategories %}
                         <li>
                             <div class="col-md-6">
-                                <a href={{url_for( 'showSubCategory', category_param=category.name, subcategory_param=subcategory.name)}}> {{subcategory.name}}</a>
+                                <a href={{url_for( 'subcategory_page.showSubCategory', category_param=category.name, subcategory_param=subcategory.name)}}> {{subcategory.name}}</a>
                             </div>
                             {% if session['username'] %}
                             <div class="col-md-6 action-font">
-                                <a href={{url_for( 'editSubCategory', category_param=category.name, subcategory_param=subcategory.name)}}>Edit</a> |
-                                <a href={{url_for( 'deleteSubCategory', category_param=category.name, subcategory_id=subcategory.id)}}>Delete</a>
+                                <a href={{url_for( 'subcategory_page.editSubCategory', category_param=category.name, subcategory_param=subcategory.name)}}>Edit</a> |
+                                <a href={{url_for( 'subcategory_page.deleteSubCategory', category_param=category.name, subcategory_id=subcategory.id)}}>Delete</a>
                             </div>
                             {% endif %}
                         </li>
